# geno-tt

./: GENO.md  README.md  SKILL.md  genotools.yaml  layer.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
geno_tt/: __init__.py  claude_sessions.py  cli.py  config.py  iterm2.py  iterm2_profile.py  iterm_api.py  registry.py  remote.py  themes.py  tree.py  tui.py
geno_tt/hooks/: hooks.json
geno_tt/scripts/: bootstrap.sh  inject_claude_md.py
geno_tt/shell/: tt.sh
skills/appearance/profile/: SKILL.md
skills/appearance/theme/: SKILL.md
skills/hosts/add/: SKILL.md
skills/hosts/default/: SKILL.md
skills/hosts/list/: SKILL.md
skills/iterm/fork/: SKILL.md
skills/iterm/group/: SKILL.md
skills/iterm/ls/: SKILL.md
skills/iterm/name/: SKILL.md
skills/iterm/new-task/: SKILL.md
skills/iterm/resume/: SKILL.md
skills/iterm/smart-name/: SKILL.md
skills/iterm/sort/: SKILL.md
skills/iterm/tab/: SKILL.md
skills/repos/code/: SKILL.md
skills/repos/list/: SKILL.md
skills/sessions/attach/: SKILL.md
skills/sessions/clean/: SKILL.md
skills/sessions/kill/: SKILL.md
skills/sessions/ls/: SKILL.md
skills/sessions/recover/: SKILL.md
skills/sessions/spawn/: SKILL.md
skills/sessions/tui/: SKILL.md
skills/workspaces/create/: SKILL.md
skills/workspaces/ecosystem-clone/: SKILL.md
skills/workspaces/inventory/: SKILL.md
skills/workspaces/migrate/: SKILL.md
skills/workspaces/mirror/: SKILL.md
skills/workspaces/overlay/: SKILL.md
skills/workspaces/report/: SKILL.md
tests/: test_cli.py  test_iterm.py  test_skills.py
(+5 files in other folders)
