[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "geno-tt"
version = "0.1.0"
description = "Terminal/session + workspace manager for the geno ecosystem (the `tt` CLI)."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "42euge" }]
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
tui = ["textual>=0.40"]
test = ["pytest>=8.0"]

[project.scripts]
tt = "geno_tt.cli:main"

[tool.setuptools.packages.find]
include = ["geno_tt*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
